# final_project

./: .gitignore  Final Project - Project plan.md  pyproject.toml
data/VocalSet/FULL/female1/: _DS_Store
data/VocalSet/FULL/female1/arpeggios/: _DS_Store
data/VocalSet/FULL/female1/excerpts/: _DS_Store
data/VocalSet/FULL/female1/long_tones/: _DS_Store
data/VocalSet/FULL/female1/scales/: _DS_Store
data/VocalSet/FULL/female2/arpeggios/: _DS_Store
data/VocalSet/FULL/female2/excerpts/: _DS_Store
data/VocalSet/FULL/female2/long_tones/: _DS_Store
data/VocalSet/FULL/female2/scales/: _DS_Store
data/VocalSet/FULL/female3/: _DS_Store
data/VocalSet/FULL/female3/arpeggios/: _DS_Store
data/VocalSet/FULL/female3/excerpts/: _DS_Store
data/VocalSet/FULL/female3/long_tones/: _DS_Store
data/VocalSet/FULL/female3/scales/: _DS_Store
data/VocalSet/FULL/female4/: _DS_Store
data/VocalSet/FULL/female4/arpeggios/: _DS_Store
data/VocalSet/FULL/female4/excerpts/: _DS_Store
data/VocalSet/FULL/female4/long_tones/: _DS_Store
data/VocalSet/FULL/female4/scales/: _DS_Store
data/VocalSet/FULL/female7/: _DS_Store
data/VocalSet/FULL/female7/scales/: _DS_Store
data/VocalSet/FULL/male1/: _DS_Store
data/VocalSet/FULL/male10/: _DS_Store
data/VocalSet/FULL/male11/: _DS_Store
data/VocalSet/__MACOSX/: ._test_singers.rtfd  ._train_singers.rtfd
data/VocalSet/__MACOSX/test_singers.rtfd/: ._TXT.rtf
data/VocalSet/__MACOSX/train_singers.rtfd/: ._TXT.rtf
data/VocalSet/test_singers.rtfd/: TXT.rtf
data/VocalSet/train_singers.rtfd/: TXT.rtf
src/analysis/: visualize.py
(+254 files in other folders)
